@@ -3,8 +3,11 @@ package backend.controller;
 import backend.mapper.GenericMapper;
 import backend.service.GenericService;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -19,28 +22,41 @@ public abstract class GenericController<T, ID, CreateDTO, UpdateDTO, ResponseDTO
         this.mapper = mapper;
     }
 
-    @GetMapping
-    public List<ResponseDTO> getAll() {
-        return service.getAll().stream()
+    protected ResponseEntity<List<ResponseDTO>> getAll() {
+        List<ResponseDTO> result = service.getAll().stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
+        if (result.isEmpty()) {
+            return ResponseEntity.noContent().build(); // 204 senza body
+        }
+
+        return ResponseEntity.ok(result); // 200 con body
     }
 
-    @GetMapping("/{id}")
-    public ResponseEntity<ResponseDTO> getById(@PathVariable ID id) {
+    protected ResponseEntity<ResponseDTO> getById(@PathVariable ID id) {
         Optional<T> entity = service.findById(id);
         return entity.map(e -> ResponseEntity.ok(mapper.toDto(e)))
                      .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
-    @PostMapping
-    public ResponseDTO create(@RequestBody CreateDTO createDTO) {
+    protected ResponseEntity<ResponseDTO> create(CreateDTO createDTO) {
         T entity = mapper.fromCreateDto(createDTO);
-        return mapper.toDto(service.create(entity));
+        T saved = service.create(entity);
+        ResponseDTO dto = mapper.toDto(saved);
+
+        // costruzione dell’URI della risorsa creata
+        URI location = ServletUriComponentsBuilder
+                .fromCurrentRequest()   // es: POST http://localhost:8080/filiali
+                .path("/{id}")          // diventa http://localhost:8080/filiali/{id}
+                .buildAndExpand(getId(saved)) // sostituisce {id} con l’ID reale della nuova entità
+                .toUri();
+
+        return ResponseEntity.created(location) // HTTP 201 Created + Location header
+                .body(dto);
     }
 
-    @PutMapping("/{id}")
-    public ResponseEntity<ResponseDTO> update(@PathVariable ID id, @RequestBody UpdateDTO updateDTO) {
+    protected ResponseEntity<ResponseDTO> update(@PathVariable ID id, @RequestBody UpdateDTO updateDTO) {
         if (service.findById(id).isEmpty()) {
             return ResponseEntity.notFound().build();
         }
@@ -48,12 +64,18 @@ public abstract class GenericController<T, ID, CreateDTO, UpdateDTO, ResponseDTO
         return ResponseEntity.ok(mapper.toDto(service.update(entity, id)));
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable ID id) {
+    protected ResponseEntity<Void> delete(@PathVariable ID id) {
         if (service.findById(id).isEmpty()) {
             return ResponseEntity.notFound().build();
         }
         service.delete(id);
         return ResponseEntity.noContent().build();
     }
+
+    // espongo il sevice
+    protected GenericService<T, ID> getService() {
+        return this.service;
+    }
+
+    protected abstract ID getId(T entity);
 }
